--- a/src/pages/banner/index.css
+++ b/src/pages/banner/index.css
@@ -2,6 +2,8 @@
 .normal {
   /* background: #79A8F2; */
   font-size: 12px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .imgAlink {
@@ -19,4 +21,5 @@
   z-index: 999;
   position: relative;
   background-color: #fff;
+  margin-bottom: 50px;
 }
